--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <script src="modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,900,700,500,100,300' rel='stylesheet' type='text/css'>
-    <link href='../res/normalize.css' rel='stylesheet' type='text/css'>
+    <link href='normalize.css' rel='stylesheet' type='text/css'>
     <link href='main.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
